criando CRUD da classe Category no swagger
